// ============================================================
// 低空智能巡检平台 - 业务域 Schema（当前实现）
// 数据库：PostgreSQL
// 说明：本文件只覆盖当前已落地业务表
// 文档类型：图表 (schema)
// ============================================================

// 文档格式说明：
// 本文件为 DBML 格式的数据库图表文件。
// 更新本文档时，请遵循以下格式：
// ```
// Table {表名} [note: '{表说明}'] {
//   {字段名} {类型} [约束, note: '{字段说明}']
//   indexes {
//     {索引字段} [name: '{索引名}']
//   }
// }
// ```

Project low_altitude_business_current {
  database_type: 'PostgreSQL'
  Note: '当前实现：无人机台账 + 无人机分配关系；业务 API 统一返回 code / msg / data'
}

// ============================================================
// 0. external refs 外部引用表（DBML 占位）
// 说明：以下表不属于"业务域当前实现"落地范围，仅用于让 DBML 引用可解析。
// ============================================================
Table tenants [note: '租户表（占位，仅用于解析 tenant_id 引用）'] {
  id bigserial [pk, note: 'id 主键']
}

Table tenant_members [note: '租户成员表（占位，仅用于解析 tenant_member_id 引用）'] {
  id bigserial [pk, note: 'id 主键']
}

// ============================================================
// 1. drones 无人机台账表
// ============================================================
Table drones [note: '无人机台账'] {
  id bigserial [pk, note: 'id 主键']
  tenant_id bigint [not null, ref: > tenants.id, note: 'tenant_id 租户ID']
  code varchar(64) [not null, note: 'code 业务编码（租户内唯一）']
  name varchar(128) [not null, note: 'name 无人机名称']
  model varchar(128) [not null, note: 'model 型号']
  device_sn varchar(128) [not null, note: 'device_sn 设备序列号（未释放记录中全局唯一）']
  status varchar(16) [not null, default: 'DISABLED', note: 'status ENABLED/DISABLED/RELEASED']
  org_id bigint [note: 'org_id 组织ID（预留）']
  created_by_tenant_member_id bigint [note: 'created_by_tenant_member_id 创建人 TenantMember ID（审计/OWN）']
  created_at timestamp [not null, default: `now()`, note: 'created_at 创建时间']
  updated_at timestamp [not null, default: `now()`, note: 'updated_at 更新时间']

  indexes {
    (tenant_id, code) [name: 'uniq_drone_tenant_code', unique]
    (tenant_id, device_sn) [name: 'uniq_drone_tenant_device_sn']
    (device_sn) [name: 'uniq_drone_device_sn_global']
  }
}

// ============================================================
// 2. drone_assignments 无人机分配关系表
// ============================================================
Table drone_assignments [note: '无人机与租户成员分配关系'] {
  id bigserial [pk, note: 'id 主键']
  tenant_id bigint [not null, ref: > tenants.id, note: 'tenant_id 租户ID']
  drone_id bigint [not null, ref: > drones.id, note: 'drone_id 无人机ID']
  tenant_member_id bigint [not null, ref: > tenant_members.id, note: 'tenant_member_id 租户成员ID']
  status varchar(16) [not null, default: 'ACTIVE', note: 'status ACTIVE/INACTIVE']
  start_at timestamp [not null, default: `now()`, note: 'start_at 生效时间']
  end_at timestamp [note: 'end_at 结束时间']
  created_by_tenant_member_id bigint [note: 'created_by_tenant_member_id 操作人 TenantMember ID']
  created_at timestamp [not null, default: `now()`, note: 'created_at 创建时间']
  updated_at timestamp [not null, default: `now()`, note: 'updated_at 更新时间']

  indexes {
    (drone_id, tenant_member_id, status) [name: 'idx_drone_tenant_member_status']
  }
}

// 注意：真实数据库中存在“部分唯一约束”
// uniq_drone_tenant_device_sn: unique(tenant_id, device_sn) where status != 'RELEASED'
// uniq_drone_device_sn_global: unique(device_sn) where status != 'RELEASED'
// uniq_active_drone_tenant_member_assignment: unique(drone_id, tenant_member_id) where status='ACTIVE'
// DBML 这里用注释表达，实际以 Django migration 为准。
//
// 当前业务接口提供 DELETE /api/v1/drones/{id} 解除认领（软删除）；
// DELETE 会将 status 置为 RELEASED 并保留历史记录，ENABLED / DISABLED 由后台同步任务写入。
//
// 业务响应字段（非库表字段，接口契约）：
// response envelope: code / msg / data
// common codes: 00000 / A0401 / A0403 / B0001 / C0101 / C0201 / C0404 / E0001
